leveldb::MojoEnv should not inherit from ChromiumEnv.

This changes leveldb::MojoEnv to no longer inherit from ChromiumEnv
since it overrides nearly every method of that class anyway. Also
rather than having the one-background-thread-per-env that ChromiumEnv
has this uses base::PostTask to post background tasks to the global task
scheduler.

Also got rid of being able to specify a custom environment name
for MojoEnv. MojoEnv doesn't (and hasn't) actually emit any of
the ChromiumEnv histograms. In a follow-up CL I'll add histograms
to MojoEnv similar to the ones that ChromiumEnv emits, but for now
it doesn't make sense to have these histograms defined.

BUG=697612

Review-Url: https://codereview.chromium.org/2822503002
Cr-Commit-Position: refs/heads/master@{#464553}

Former-commit-id: 6bfb96f0eb4350010c8d9c29fb40408212536bcc